--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "stripe": "^16.6.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
   }
