--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,10 +1,11 @@
 {
-  "buildCommand": "chmod +x node_modules/.bin/vite && npm run build",
-  "installCommand": "npm ci || npm install",
+  "buildCommand": "bash build.sh",
+  "installCommand": "npm install",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "build": {
     "env": {
       "NODE_VERSION": "18"
     }
-  },
-  "framework": "vite"
+  }
 }
